fix: popup footer spacing

--- a/src/pages/Popup.css
+++ b/src/pages/Popup.css
@@ -141,9 +141,9 @@
 }
 
 .footer-links {
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	text-align: center;
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
 }
 
 .github-link {
